update for 1.14, convert to modification.

--- a/Nemesis/macros/special-notes.cfg
+++ b/Nemesis/macros/special-notes.cfg
@@ -91,6 +91,9 @@ _" The length of this unit’s weapon allows it to strike first in melee, even i
 #define SPECIAL_NOTES_POISON
 _" The victims of this unit’s poison will continually take damage until they can be cured in town or by a unit which cures."#enddef
 
+#define SPECIAL_NOTES_DEFENSE_CAP
+_" This unit has a defense cap on certain terrain types — it cannot achieve a higher defense rating on mixed terrains with such terrain types."#enddef
+
 #define SPECIAL_NOTES_DELUMINATES
     _ " This unit darkens the surrounding area, making chaotic units fight better, and lawful units fight worse." #enddef
 
@@ -108,5 +111,4 @@ _ " This unit is able to shock its enemies, reduce attack one less time than nor
 # from The Rise of Wesnoth
 #define SPECIAL_NOTES_DISTRACT
 _"This unit is capable of distracting opponents, allowing allied units to trespass their Zones of Control and move unhindered around them."#enddef
-
 
