--- a/Nemesis/units/Eris.cfg
+++ b/Nemesis/units/Eris.cfg
@@ -1,64 +1,32 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Nyx
-    name= _ "female^Nyx"
+    id=Eris
+    name= _ "female^Necromancer"
     {TRAIT_FEARLESS_MUSTHAVE}
     {TRAIT_LOYAL}
     {TRAIT_UNDEAD}
     gender=female
     race=human
     image="units/undead-necromancers/necromancer+female.png"
-    {MAGENTA_IS_THE_TEAM_COLOR}
     profile="portraits/humans/necromancer+female.png"
-    hitpoints=150
+    hitpoints=90
     movement_type=smallfoot
-    movement=8
+    movement=6
     experience=150
-    level=6
+    level=4
     alignment=chaotic
-    advances_to=null
-    {AMLA_NEMESIS}
-    cost=250
+    advances_to=Nemesis
+    {AMLA_DEFAULT}
+    cost=100
     usage=mixed fighter
     description= _ "One of the pinnacles of what is considered ‘black magic’ is the art of necromancy, the terrible ability to awaken the dead with false life. This discovery alone caused humanity’s condemnation of black magic, for the nightmarish things it has made real have given fear a vast new arsenal.
 
-This ability, in all aspects, is the first step towards cheating death of its ultimate prize."+{SPECIAL_NOTES}+{SPECIAL_NOTES_FEEDING}+{SPECIAL_NOTES_REGENERATES}+{SPECIAL_NOTES_FIRSTSTRIKE}+{SPECIAL_NOTES_DRAIN}+{SPECIAL_NOTES_SKIRMISHER}+{SPECIAL_NOTES_BERSERK}+{SPECIAL_NOTES_STEADFAST}+{SPECIAL_NOTES_CURES}+{SPECIAL_NOTES_LEADERSHIP}+{SPECIAL_NOTES_TELEPORT}+{SPECIAL_NOTES_ARCANE}+{SPECIAL_NOTES_DISTRACT}+{SPECIAL_NOTES_SHOCK}+{SPECIAL_NOTES_STUN}
+This ability, in all aspects, is the first step towards cheating death of its ultimate prize."+{SPECIAL_NOTES}+{SPECIAL_NOTES_MAGICAL}+{SPECIAL_NOTES_PLAGUE}+{SPECIAL_NOTES_ARCANE}
     die_sound={SOUND_LIST:HUMAN_FEMALE_DIE}
     {DEFENSE_ANIM "units/undead-necromancers/necromancer+female-defend.png" "units/undead-necromancers/necromancer+female.png" {SOUND_LIST:HUMAN_FEMALE_HIT} }
-    [portrait]
-        size=400
-        side="left"
-        mirror="false"
-        image="portraits/humans/transparent/necromancer+female.png"
-    [/portrait]
-    [portrait]
-        size=400
-        side="right"
-        mirror="true"
-        image="portraits/humans/transparent/necromancer+female.png"
-    [/portrait]
     [abilities]
-        {ABILITY_FEEDING}
-        {ABILITY_REGENERATES_OTHER 16}
         {ABILITY_SKIRMISHER}
-        {ABILITY_GREATER_EVISCERATION}
-        {ABILITY_STEADFAST}
-        {ABILITY_LEADERSHIP_LEVEL_5}
-        {ABILITY_TELEPORT}
-        {ABILITY_DISTRACT}
-        {ABILITY_INITIATIVE}
-        # {ABILITY_DELUMINATES}
-        {ABILITY_DISRUPTS}
-        {ABILITY_GREAT_PROTECTION}
-        {ABILITY_STEALTH}
-        {ABILITY_IMMUNE_TO_SLOW}
-        {ABILITY_STEALS}
-        {ABILITY_PENETRATE}
-        {ABILITY_BURNING_AURA 8}
-        {ABILITY_PENETRATE_LEADERSHIP}
-        {ABILITY_FROM_THE_ASHES}
-        {ABILITY_NORTHFROST_AURA}
-        {ABILITY_HEALS_OTHER 16}
+        {ABILITY_SMALL_PROTECTION}
     [/abilities]
     [attack]
         name=plague staff
@@ -66,19 +34,12 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         icon=attacks/staff-plague.png
         type=impact
         range=melee
-        damage=4
-        number=8
+        damage=8
+        number=3
         [specials]
-            {WEAPON_SPECIAL_GREATER_INFECT}
+            {WEAPON_SPECIAL_PLAGUE}
             {WEAPON_SPECIAL_FIRSTSTRIKE}
-            {WEAPON_SPECIAL_DRAIN}
-            {WEAPON_SPECIAL_UBER_BACKSTAB}
-            {WEAPON_SPECIAL_EXPLOSIVE_SLOW}
-            {WEAPON_SPECIAL_SHOCK}
-            {WEAPON_SPECIAL_STUN}
-            {WEAPON_SPECIAL_SHOCKWAVE}
             {WEAPON_SPECIAL_NOCOUNTERATTACK}
-            {WEAPON_SPECIAL_HIT_AND_RUN}
         [/specials]
     [/attack]
     [attack]
@@ -88,17 +49,10 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         [specials]
             {WEAPON_SPECIAL_CIRCLE}
             {WEAPON_SPECIAL_FIRSTSTRIKE}
-            {WEAPON_SPECIAL_DRAIN}
-            {WEAPON_SPECIAL_UBER_BACKSTAB}
-            {WEAPON_SPECIAL_EXPLOSIVE_SLOW}
-            {WEAPON_SPECIAL_SHOCK}
-            {WEAPON_SPECIAL_STUN}
-            {WEAPON_SPECIAL_SHOCKWAVE}
             {WEAPON_SPECIAL_NOCOUNTERATTACK}
-            {WEAPON_SPECIAL_HIT_AND_RUN}
         [/specials]
         range=ranged
-        damage=30
+        damage=21
         number=2
         icon=attacks/iceball.png
     [/attack]
@@ -109,40 +63,13 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         [specials]
             {WEAPON_SPECIAL_CIRCLE}
             {WEAPON_SPECIAL_FIRSTSTRIKE}
-            {WEAPON_SPECIAL_DRAIN}
-            {WEAPON_SPECIAL_UBER_BACKSTAB}
-            {WEAPON_SPECIAL_EXPLOSIVE_SLOW}
-            {WEAPON_SPECIAL_SHOCK}
-            {WEAPON_SPECIAL_STUN}
-            {WEAPON_SPECIAL_SHOCKWAVE}
             {WEAPON_SPECIAL_NOCOUNTERATTACK}
-            {WEAPON_SPECIAL_HIT_AND_RUN}
         [/specials]
         range=ranged
-        damage=20
+        damage=15
         number=2
         icon=attacks/dark-missile.png
     [/attack]
-    [attack]
-        name=dragonstaff
-        description=_"dragonstaff"
-        type=pierce
-        range=ranged
-        damage=140
-        number=1
-        icon=attacks/dragonstaff.png
-        [specials]
-            {WEAPON_SPECIAL_CIRCLE}
-            {WEAPON_SPECIAL_FIRSTSTRIKE}
-            {WEAPON_SPECIAL_UBER_BACKSTAB}
-            {WEAPON_SPECIAL_EXPLOSIVE_SLOW}
-            {WEAPON_SPECIAL_STUN}
-            {WEAPON_SPECIAL_SHOCKWAVE}
-            {WEAPON_SPECIAL_NOCOUNTERATTACK}
-            {WEAPON_SPECIAL_HIT_AND_RUN}
-            {WEAPON_SPECIAL_SOUL_EXTRACTION}
-        [/specials]
-    [/attack] 
     [recruiting_anim]
         [filter_second]
             race=undead
@@ -153,6 +80,7 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         [/frame]
         [frame]
             image="units/undead-necromancers/necromancer+female-magic-3.png"
+            halo=halo/undead/black-magic-[1~5].png:[75*4,50]
         [/frame]
         sound_start_time=-75
         [sound_frame]
@@ -213,32 +141,6 @@ This ability, in all aspects, is the first step towards cheating death of its ul
     [/attack_anim]
     [attack_anim]
         [filter_attack]
-            name=dragonstaff
-        [/filter_attack]
-
-        {MISSILE_FRAME_SHADOW_WAVE}
-
-        start_time=-675
-        [frame]
-            image="units/undead-necromancers/necromancer+female-magic-[1,2].png:75"
-        [/frame]
-        [frame]
-            image="units/undead-necromancers/necromancer+female-magic-3.png"
-            halo=halo/undead/black-magic-[1~5].png:[75*4,50]
-        [/frame]
-        [frame]
-            image="units/undead-necromancers/necromancer+female-magic-3.png:250"
-        [/frame]
-        {SOUND:HIT_AND_MISS magic-dark-big.ogg magic-dark-big-miss.ogg -50}
-        [frame]
-            image="units/undead-necromancers/necromancer+female-magic-[2,1].png:50"
-        [/frame]
-        [frame]
-            image="units/undead-necromancers/necromancer+female.png:50"
-        [/frame]
-    [/attack_anim]
-    [attack_anim]
-        [filter_attack]
             name=plague staff
         [/filter_attack]
         start_time=-250
@@ -248,7 +150,7 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         [frame]
             image="units/undead-necromancers/necromancer+female-attack-staff-[1~2].png:[100,200]"
         [/frame]
-        {SOUND:HIT_AND_MISS staff.wav {SOUND_LIST:MISS} -100}
+        {SOUND:HIT_AND_MISS staff.ogg staff-miss.ogg -125}
         [frame]
             image="units/undead-necromancers/necromancer+female-magic-1.png:75"
         [/frame]
@@ -256,4 +158,80 @@ This ability, in all aspects, is the first step towards cheating death of its ul
             image="units/undead-necromancers/necromancer+female.png:75"
         [/frame]
     [/attack_anim]
+    [female]
+        name= _ "female^Necromancer"
+        gender=female
+        image="units/undead-necromancers/necromancer+female.png"
+        profile="portraits/humans/necromancer+female.png"
+        die_sound={SOUND_LIST:HUMAN_FEMALE_DIE}
+        {DEFENSE_ANIM "units/undead-necromancers/necromancer+female-defend.png" "units/undead-necromancers/necromancer+female.png" {SOUND_LIST:HUMAN_FEMALE_HIT} }
+        [recruiting_anim]
+            [filter_second]
+                race=undead
+            [/filter_second]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-[1,2].png:75"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-3.png"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-[2,1].png:50"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female.png:1"
+            [/frame]
+        [/recruiting_anim]
+        [attack_anim]
+            [filter_attack]
+                name=chill wave
+            [/filter_attack]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-[1,2].png:75"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-3.png"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-[2,1].png:50"
+            [/frame]
+        [/attack_anim]
+        [attack_anim]
+            [filter_attack]
+                name=shadow wave
+            [/filter_attack]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-[1,2].png:75"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-3.png"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-3.png:250"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-[2,1].png:50"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female.png:50"
+            [/frame]
+        [/attack_anim]
+        [attack_anim]
+            [filter_attack]
+                name=plague staff
+            [/filter_attack]
+            [frame]
+                image="units/undead-necromancers/necromancer+female.png:50"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-attack-staff-[1~2].png:[100,200]"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-1.png:75"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female.png:75"
+            [/frame]
+        [/attack_anim]
+    [/female]
 [/unit_type]
