--- a/Nemesis/units/Nyx.cfg
+++ b/Nemesis/units/Nyx.cfg
@@ -1,49 +1,70 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Necromancer
-    name= _ "Necromancer"
-    gender=male,female
+    id=Nyx
+    name= _ "female^Necromancer"
+    {TRAIT_FEARLESS_MUSTHAVE}
+    {TRAIT_LOYAL}
+    {TRAIT_UNDEAD}
+    gender=female
     race=human
-    image="units/undead-necromancers/necromancer.png"
-    {MAGENTA_IS_THE_TEAM_COLOR}
-    profile="portraits/humans/necromancer.png"
-    hitpoints=70
+    image="units/undead-necromancers/necromancer+female.png"
+    profile="portraits/humans/necromancer+female.png"
+    hitpoints=150
     movement_type=smallfoot
-    movement=5
+    movement=8
     experience=150
-    level=3
+    level=6
     alignment=chaotic
-    advances_to=Eris
-    {AMLA_DEFAULT}
-    cost=50
+    advances_to=Null
+    {AMLA_NEMESIS}
+    cost=250
     usage=mixed fighter
     description= _ "One of the pinnacles of what is considered ‘black magic’ is the art of necromancy, the terrible ability to awaken the dead with false life. This discovery alone caused humanity’s condemnation of black magic, for the nightmarish things it has made real have given fear a vast new arsenal.
 
-This ability, in all aspects, is the first step towards cheating death of its ultimate prize."+{SPECIAL_NOTES}+{SPECIAL_NOTES_MAGICAL}+{SPECIAL_NOTES_PLAGUE}+{SPECIAL_NOTES_ARCANE}
-    die_sound={SOUND_LIST:HUMAN_OLD_DIE}
-    {DEFENSE_ANIM "units/undead-necromancers/necromancer-defend.png" "units/undead-necromancers/necromancer.png" {SOUND_LIST:HUMAN_OLD_HIT} }
-    [portrait]
-        size=400
-        side="left"
-        mirror="false"
-        image="portraits/humans/transparent/necromancer.png"
-    [/portrait]
-    [portrait]
-        size=400
-        side="right"
-        mirror="true"
-        image="portraits/humans/transparent/necromancer.png"
-    [/portrait]
+This ability, in all aspects, is the first step towards cheating death of its ultimate prize."+{SPECIAL_NOTES}+{SPECIAL_NOTES_FEEDING}+{SPECIAL_NOTES_REGENERATES}+{SPECIAL_NOTES_FIRSTSTRIKE}+{SPECIAL_NOTES_DRAIN}+{SPECIAL_NOTES_SKIRMISHER}+{SPECIAL_NOTES_BERSERK}+{SPECIAL_NOTES_STEADFAST}+{SPECIAL_NOTES_CURES}+{SPECIAL_NOTES_LEADERSHIP}+{SPECIAL_NOTES_TELEPORT}+{SPECIAL_NOTES_ARCANE}+{SPECIAL_NOTES_DISTRACT}+{SPECIAL_NOTES_SHOCK}+{SPECIAL_NOTES_STUN}
+    die_sound={SOUND_LIST:HUMAN_FEMALE_DIE}
+    {DEFENSE_ANIM "units/undead-necromancers/necromancer+female-defend.png" "units/undead-necromancers/necromancer+female.png" {SOUND_LIST:HUMAN_FEMALE_HIT} }
+    [abilities]
+        {ABILITY_FEEDING}
+        {ABILITY_REGENERATES_OTHER 16}
+        {ABILITY_SKIRMISHER}
+        {ABILITY_GREATER_EVISCERATION}
+        {ABILITY_STEADFAST}
+        {ABILITY_LEADERSHIP_LEVEL_5}
+        {ABILITY_TELEPORT}
+        {ABILITY_DISTRACT}
+        {ABILITY_INITIATIVE}
+        {ABILITY_DISRUPTS}
+        {ABILITY_GREAT_PROTECTION}
+        {ABILITY_STEALTH}
+        {ABILITY_IMMUNE_TO_SLOW}
+        {ABILITY_STEALS}
+        {ABILITY_PENETRATE}
+        {ABILITY_BURNING_AURA 8}
+        {ABILITY_PENETRATE_LEADERSHIP}
+        {ABILITY_FROM_THE_ASHES}
+        {ABILITY_NORTHFROST_AURA}
+        {ABILITY_HEALS_OTHER 16}
+    [/abilities]
     [attack]
         name=plague staff
         description=_"plague staff"
         icon=attacks/staff-plague.png
         type=impact
         range=melee
-        damage=6
-        number=3
+        damage=8
+        number=4
         [specials]
-            {WEAPON_SPECIAL_PLAGUE}
+            {WEAPON_SPECIAL_GREATER_INFECT}
+            {WEAPON_SPECIAL_FIRSTSTRIKE}
+            {WEAPON_SPECIAL_DRAIN}
+            {WEAPON_SPECIAL_UBER_BACKSTAB}
+            {WEAPON_SPECIAL_EXPLOSIVE_SLOW}
+            {WEAPON_SPECIAL_SHOCK}
+            {WEAPON_SPECIAL_STUN}
+            {WEAPON_SPECIAL_SHOCKWAVE}
+            {WEAPON_SPECIAL_NOCOUNTERATTACK}
+            {WEAPON_SPECIAL_HIT_AND_RUN}
         [/specials]
     [/attack]
     [attack]
@@ -51,10 +72,19 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         description=_"chill wave"
         type=cold
         [specials]
-            {WEAPON_SPECIAL_MAGICAL}
+            {WEAPON_SPECIAL_CIRCLE}
+            {WEAPON_SPECIAL_FIRSTSTRIKE}
+            {WEAPON_SPECIAL_DRAIN}
+            {WEAPON_SPECIAL_UBER_BACKSTAB}
+            {WEAPON_SPECIAL_EXPLOSIVE_SLOW}
+            {WEAPON_SPECIAL_SHOCK}
+            {WEAPON_SPECIAL_STUN}
+            {WEAPON_SPECIAL_SHOCKWAVE}
+            {WEAPON_SPECIAL_NOCOUNTERATTACK}
+            {WEAPON_SPECIAL_HIT_AND_RUN}
         [/specials]
         range=ranged
-        damage=17
+        damage=30
         number=2
         icon=attacks/iceball.png
     [/attack]
@@ -63,10 +93,19 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         description=_"shadow wave"
         type=arcane
         [specials]
-            {WEAPON_SPECIAL_MAGICAL}
+            {WEAPON_SPECIAL_CIRCLE}
+            {WEAPON_SPECIAL_FIRSTSTRIKE}
+            {WEAPON_SPECIAL_DRAIN}
+            {WEAPON_SPECIAL_UBER_BACKSTAB}
+            {WEAPON_SPECIAL_EXPLOSIVE_SLOW}
+            {WEAPON_SPECIAL_SHOCK}
+            {WEAPON_SPECIAL_STUN}
+            {WEAPON_SPECIAL_SHOCKWAVE}
+            {WEAPON_SPECIAL_NOCOUNTERATTACK}
+            {WEAPON_SPECIAL_HIT_AND_RUN}
         [/specials]
         range=ranged
-        damage=12
+        damage=20
         number=2
         icon=attacks/dark-missile.png
     [/attack]
@@ -76,10 +115,10 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         [/filter_second]
         start_time=-300
         [frame]
-            image="units/undead-necromancers/necromancer-magic-[1,2].png:75"
+            image="units/undead-necromancers/necromancer+female-magic-[1,2].png:75"
         [/frame]
         [frame]
-            image="units/undead-necromancers/necromancer-magic-3.png"
+            image="units/undead-necromancers/necromancer+female-magic-3.png"
             halo=halo/undead/black-magic-[1~5].png:[75*4,50]
         [/frame]
         sound_start_time=-75
@@ -87,10 +126,10 @@ This ability, in all aspects, is the first step towards cheating death of its ul
             sound=magic-dark.ogg
         [/sound_frame]
         [frame]
-            image="units/undead-necromancers/necromancer-magic-[2,1].png:50"
+            image="units/undead-necromancers/necromancer+female-magic-[2,1].png:50"
         [/frame]
         [frame]
-            image="units/undead-necromancers/necromancer.png:1"
+            image="units/undead-necromancers/necromancer+female.png:1"
         [/frame]
     [/recruiting_anim]
     [attack_anim]
@@ -102,15 +141,15 @@ This ability, in all aspects, is the first step towards cheating death of its ul
 
         start_time=-355
         [frame]
-            image="units/undead-necromancers/necromancer-magic-[1,2].png:75"
+            image="units/undead-necromancers/necromancer+female-magic-[1,2].png:75"
         [/frame]
         [frame]
-            image="units/undead-necromancers/necromancer-magic-3.png"
+            image="units/undead-necromancers/necromancer+female-magic-3.png"
             halo=halo/undead/black-magic-[1~5].png:[75*4,50]
         [/frame]
         {SOUND:HIT_AND_MISS magic-dark.ogg magic-dark-miss.ogg -120}
         [frame]
-            image="units/undead-necromancers/necromancer-magic-[2,1].png:50"
+            image="units/undead-necromancers/necromancer+female-magic-[2,1].png:50"
         [/frame]
     [/attack_anim]
     [attack_anim]
@@ -122,21 +161,21 @@ This ability, in all aspects, is the first step towards cheating death of its ul
 
         start_time=-675
         [frame]
-            image="units/undead-necromancers/necromancer-magic-[1,2].png:75"
+            image="units/undead-necromancers/necromancer+female-magic-[1,2].png:75"
         [/frame]
         [frame]
-            image="units/undead-necromancers/necromancer-magic-3.png"
+            image="units/undead-necromancers/necromancer+female-magic-3.png"
             halo=halo/undead/black-magic-[1~5].png:[75*4,50]
         [/frame]
         [frame]
-            image="units/undead-necromancers/necromancer-magic-3.png:250"
+            image="units/undead-necromancers/necromancer+female-magic-3.png:250"
         [/frame]
         {SOUND:HIT_AND_MISS magic-dark-big.ogg magic-dark-big-miss.ogg -50}
         [frame]
-            image="units/undead-necromancers/necromancer-magic-[2,1].png:50"
+            image="units/undead-necromancers/necromancer+female-magic-[2,1].png:50"
         [/frame]
         [frame]
-            image="units/undead-necromancers/necromancer.png:50"
+            image="units/undead-necromancers/necromancer+female.png:50"
         [/frame]
     [/attack_anim]
     [attack_anim]
@@ -145,17 +184,17 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         [/filter_attack]
         start_time=-250
         [frame]
-            image="units/undead-necromancers/necromancer.png:50"
+            image="units/undead-necromancers/necromancer+female.png:50"
         [/frame]
         [frame]
-            image="units/undead-necromancers/necromancer-attack-staff-[1~2].png:[100,200]"
+            image="units/undead-necromancers/necromancer+female-attack-staff-[1~2].png:[100,200]"
         [/frame]
-        {SOUND:HIT_AND_MISS staff.wav {SOUND_LIST:MISS} -100}
+        {SOUND:HIT_AND_MISS staff.ogg staff-miss.ogg -125}
         [frame]
-            image="units/undead-necromancers/necromancer-magic-1.png:75"
+            image="units/undead-necromancers/necromancer+female-magic-1.png:75"
         [/frame]
         [frame]
-            image="units/undead-necromancers/necromancer.png:75"
+            image="units/undead-necromancers/necromancer+female.png:75"
         [/frame]
     [/attack_anim]
     [female]
@@ -165,18 +204,6 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         profile="portraits/humans/necromancer+female.png"
         die_sound={SOUND_LIST:HUMAN_FEMALE_DIE}
         {DEFENSE_ANIM "units/undead-necromancers/necromancer+female-defend.png" "units/undead-necromancers/necromancer+female.png" {SOUND_LIST:HUMAN_FEMALE_HIT} }
-        [portrait]
-            size=400
-            side="left"
-            mirror="false"
-            image="portraits/humans/transparent/necromancer+female.png"
-        [/portrait]
-        [portrait]
-            size=400
-            side="right"
-            mirror="true"
-            image="portraits/humans/transparent/necromancer+female.png"
-        [/portrait]
         [recruiting_anim]
             [filter_second]
                 race=undead
