--- a/Nemesis/macros/abilities.cfg
+++ b/Nemesis/macros/abilities.cfg
@@ -12,11 +12,10 @@
         description=  _ "Allows the unit to heal adjacent allied units at the beginning of our turn.
 
 A unit cared for by this healer may heal up to 4 HP per turn, or stop poison from taking effect for that turn.
-A poisoned unit cannot be cured of its poison by a healer, and must seek the care of a village or a unit that can cure."
+This ability will not cure an affected unit of poison, however, only delay its effect."
         affect_self=no
         poison=slowed
         [affect_adjacent]
-            adjacent=n,ne,se,s,sw,nw
         [/affect_adjacent]
     [/heals]
 #enddef
@@ -31,11 +30,10 @@ A poisoned unit cannot be cured of its poison by a healer, and must seek the car
         description= _ "This unit combines herbal remedies with magic to heal units more quickly than is normally possible on the battlefield.
 
 A unit cared for by this healer may heal up to 8 HP per turn, or stop poison from taking effect for that turn.
-A poisoned unit cannot be cured of its poison by a healer, and must seek the care of a village or a unit that can cure."
+This ability will not cure an affected unit of poison, however, only delay its effect."
         affect_self=no
         poison=slowed
         [affect_adjacent]
-            adjacent=n,ne,se,s,sw,nw
         [/affect_adjacent]
     [/heals]
 #enddef
@@ -52,7 +50,6 @@ A poisoned unit cannot be cured of its poison by a healer, and must seek the car
         affect_self=no
         poison=cured
         [affect_adjacent]
-            adjacent=n,ne,se,s,sw,nw
         [/affect_adjacent]
     [/heals]
 #enddef
@@ -452,23 +449,16 @@ Any units adjacent to this unit will fight as if it were dusk when it is night, 
             id=village_teleport
             [source]
                 terrain=*^V*
-                owner_side=$teleport_unit.side
-                [not]
-                    [filter]
-                        [not]
-                            id=$teleport_unit.id
-                        [/not]
-                    [/filter]
-                [/not]
+                formula="
+                    owner = teleport_unit.side and (unit = teleport_unit or not unit)
+                where
+                    unit = unit_at(loc)
+                "
             [/source]
 
             [target]
                 terrain=*^V*
-                owner_side=$teleport_unit.side
-                [not]
-                    [filter]
-                    [/filter]
-                [/not]
+                formula="owner = teleport_unit.side and not unit_at(loc)"
             [/target]
 
             [filter]
@@ -485,12 +475,7 @@ Any units adjacent to this unit will fight as if it were dusk when it is night, 
         id=ambush
         name= _ "ambush"
         female_name= _ "female^ambush"
-        name_inactive= _ "ambush"
-        female_name_inactive= _ "female^ambush"
         description= _ "This unit can hide in forest, and remain undetected by its enemies.
-
-Enemy units cannot see this unit while it is in forest, except if they have units next to it. Any enemy unit that first discovers this unit immediately loses all its remaining movement."
-        description_inactive= _ "This unit can hide in forest, and remain undetected by its enemies.
 
 Enemy units cannot see this unit while it is in forest, except if they have units next to it. Any enemy unit that first discovers this unit immediately loses all its remaining movement."
         affect_self=yes
@@ -512,11 +497,6 @@ Enemy units cannot see this unit while it is in forest, except if they have unit
         description= _ "The unit becomes invisible during night.
 
 Enemy units cannot see this unit at night, except if they have units next to it. Any enemy unit that first discovers this unit immediately loses all its remaining movement."
-        name_inactive= _ "nightstalk"
-        female_name_inactive= _ "female^nightstalk"
-        description_inactive= _ "The unit becomes invisible during night.
-
-Enemy units cannot see this unit at night, except if they have units next to it. Any enemy unit that first discovers this unit immediately loses all its remaining movement."
         affect_self=yes
         [filter]
             [filter_location]
@@ -535,12 +515,7 @@ Enemy units cannot see this unit at night, except if they have units next to it.
         female_name= _ "female^concealment"
         description= _ "This unit can hide in villages (with the exception of water villages), and remain undetected by its enemies, except by those standing next to it.
 
-Enemy units can not see this unit while it is in a village, except if they have units next to it. Any enemy unit that first discovers this unit immediately loses all its remaining movement."
-        name_inactive= _ "concealment"
-        female_name_inactive= _ "female^concealment"
-        description_inactive= _ "This unit can hide in villages (with the exception of water villages), and remain undetected by its enemies, except by those standing next to it.
-
-Enemy units can not see this unit while it is in a village, except if they have units next to it. Any enemy unit that first discovers this unit immediately loses all its remaining movement."
+Enemy units cannot see this unit while it is in a village, except if they have units next to it. Any enemy unit that first discovers this unit immediately loses all its remaining movement."
         affect_self=yes
         [filter]
             [filter_location]
@@ -558,11 +533,6 @@ Enemy units can not see this unit while it is in a village, except if they have 
         name= _ "submerge"
         female_name= _ "female^submerge"
         description= _ "This unit can hide in deep water, and remain undetected by its enemies.
-
-Enemy units cannot see this unit while it is in deep water, except if they have units next to it. Any enemy unit that first discovers this unit immediately loses all its remaining movement."
-        name_inactive= _ "submerge"
-        female_name_inactive= _ "female^submerge"
-        description_inactive= _ "This unit can hide in deep water, and remain undetected by its enemies.
 
 Enemy units cannot see this unit while it is in deep water, except if they have units next to it. Any enemy unit that first discovers this unit immediately loses all its remaining movement."
         affect_self=yes
@@ -655,8 +625,14 @@ Enemy units cannot see this unit while it is in deep water, except if they have 
         name= _ "backstab"
         description= _ "When used offensively, this attack deals double damage if there is an enemy of the target on the opposite side of the target, and that unit is not incapacitated (turned to stone or otherwise paralyzed)."
         multiply=2
-        backstab=yes
         active_on=offense
+        [filter_opponent]
+            formula="
+                enemy_of(self, flanker) and not flanker.petrified
+            where
+                flanker = unit_at(direction_from(loc, other.facing))
+            "
+        [/filter_opponent]
     [/damage]
 #enddef
 
@@ -666,7 +642,7 @@ Enemy units cannot see this unit while it is in deep water, except if they have 
     [plague]
         id=plague({TYPE})
         name= _ "plague"
-        description= _ "When a unit is killed by a Plague attack, that unit is replaced with a unit identical to and on the same side as the unit with the Plague attack. This doesn’t work on Undead or units in villages."
+        description= _ "When a unit is killed by a Plague attack, that unit is replaced with a unit on the same side as the unit with the Plague attack. This doesn’t work on Undead or units in villages."
         type={TYPE}
     [/plague]
 #enddef
@@ -776,9 +752,10 @@ Enemy units cannot see this unit while it is in deep water, except if they have 
     [poison]
         id=poison
         name= _ "poison"
-        description= _ "This attack poisons living targets. Poisoned units lose 8 HP every turn until they are cured or are reduced to 1 HP. Poison can not, of itself, kill a unit."
+        description= _ "This attack poisons living targets. Poisoned units lose 8 HP every turn until they are cured or are reduced to 1 HP. Poison cannot, of itself, kill a unit."
     [/poison]
 #enddef
+
 
 #define ABILITY_DISTRACT
     [skirmisher]
@@ -1470,5 +1447,4 @@ This ability ignores any resistances or weaknesses of enemies, so it's very powe
         description= _ "All enemies in the range of two hexes from this unit will be slowed at the beginning of their turn."
     [/dummy]
 #enddef
-
 
