--- a/Nemesis/macros/amla.cfg
+++ b/Nemesis/macros/amla.cfg
@@ -7,16 +7,16 @@
         strict_amla=yes
         max_times=-1
         id=amla_default
-        description= _ "Max HP bonus +3, Max XP +20%"
-        image="misc/icon-amla-tough.png"
+        description= _ "Max HP bonus +10, Max XP +5%"
+        image="icons/amla-default.png"
         [effect]
             apply_to=hitpoints
-            increase_total=3
+            increase_total=10
             heal_full=yes
         [/effect]
         [effect]
             apply_to=max_experience
-            increase=20%
+            increase=5%
         [/effect]
         [effect]
             apply_to=status
@@ -28,7 +28,6 @@
         [/effect]
     [/advancement]
 #enddef
-
 
 #define AMLA_NEMESIS
     # Canned definition of the default AMLA.
@@ -51,7 +50,7 @@
         [/effect]
         [effect]
             apply_to=hitpoints
-            increase_total=3
+            increase_total=10
             heal_full=yes
         [/effect]
         [effect]
@@ -76,7 +75,7 @@
         [/effect]
         [effect]
             apply_to=hitpoints
-            increase_total=3
+            increase_total=10
             heal_full=yes
         [/effect]
         [effect]
@@ -101,7 +100,7 @@
         [/effect]
         [effect]
             apply_to=hitpoints
-            increase_total=3
+            increase_total=10
             heal_full=yes
         [/effect]
         [effect]
@@ -126,7 +125,7 @@
         [/effect]
         [effect]
             apply_to=hitpoints
-            increase_total=3
+            increase_total=10
             heal_full=yes
         [/effect]
         [effect]
@@ -151,7 +150,7 @@
         [/effect]
         [effect]
             apply_to=hitpoints
-            increase_total=3
+            increase_total=10
             heal_full=yes
         [/effect]
         [effect]
@@ -176,7 +175,7 @@
         [/effect]
         [effect]
             apply_to=hitpoints
-            increase_total=3
+            increase_total=10
             heal_full=yes
         [/effect]
         [effect]
@@ -201,7 +200,7 @@
         [/effect]
         [effect]
             apply_to=hitpoints
-            increase_total=3
+            increase_total=10
             heal_full=yes
         [/effect]
         [effect]
@@ -226,7 +225,7 @@
         [/effect]
         [effect]
             apply_to=hitpoints
-            increase_total=3
+            increase_total=10
             heal_full=yes
         [/effect]
         [effect]
