--- a/Nemesis/units/Nemesis.cfg
+++ b/Nemesis/units/Nemesis.cfg
@@ -1,45 +1,35 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Eris
-    name= _ "female^Eris"
+    id=Nemesis
+    name= _ "female^Necromancer"
     {TRAIT_FEARLESS_MUSTHAVE}
     {TRAIT_LOYAL}
     {TRAIT_UNDEAD}
     gender=female
     race=human
     image="units/undead-necromancers/necromancer+female.png"
-    {MAGENTA_IS_THE_TEAM_COLOR}
     profile="portraits/humans/necromancer+female.png"
-    hitpoints=90
+    hitpoints=120
     movement_type=smallfoot
-    movement=6
+    movement=7
     experience=150
-    level=4
+    level=5
     alignment=chaotic
-    advances_to=Nemesis
+    advances_to=Nyx
     {AMLA_DEFAULT}
-    cost=100
+    cost=150
     usage=mixed fighter
     description= _ "One of the pinnacles of what is considered ‘black magic’ is the art of necromancy, the terrible ability to awaken the dead with false life. This discovery alone caused humanity’s condemnation of black magic, for the nightmarish things it has made real have given fear a vast new arsenal.
 
-This ability, in all aspects, is the first step towards cheating death of its ultimate prize."+{SPECIAL_NOTES}+{SPECIAL_NOTES_FIRSTSTRIKE}+{SPECIAL_NOTES_SKIRMISHER}+{SPECIAL_NOTES_PLAGUE}+{SPECIAL_NOTES_ARCANE}
+This ability, in all aspects, is the first step towards cheating death of its ultimate prize."+{SPECIAL_NOTES}+{SPECIAL_NOTES_REGENERATES}+{SPECIAL_NOTES_FIRSTSTRIKE}+{SPECIAL_NOTES_BACKSTAB}+{SPECIAL_NOTES_SKIRMISHER}+{SPECIAL_NOTES_STEADFAST}+{SPECIAL_NOTES_PLAGUE}+{SPECIAL_NOTES_ARCANE}+{SPECIAL_NOTES_POISON}+{SPECIAL_NOTES_DRAIN}
     die_sound={SOUND_LIST:HUMAN_FEMALE_DIE}
     {DEFENSE_ANIM "units/undead-necromancers/necromancer+female-defend.png" "units/undead-necromancers/necromancer+female.png" {SOUND_LIST:HUMAN_FEMALE_HIT} }
-    [portrait]
-        size=400
-        side="left"
-        mirror="false"
-        image="portraits/humans/transparent/necromancer+female.png"
-    [/portrait]
-    [portrait]
-        size=400
-        side="right"
-        mirror="true"
-        image="portraits/humans/transparent/necromancer+female.png"
-    [/portrait]
     [abilities]
+        {ABILITY_REGENERATES}
         {ABILITY_SKIRMISHER}
-        {ABILITY_SMALL_PROTECTION}
+        {ABILITY_STEADFAST}
+        {ABILITY_DISRUPTS}
+        {ABILITY_MIDDLE_PROTECTION}
     [/abilities]
     [attack]
         name=plague staff
@@ -47,12 +37,15 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         icon=attacks/staff-plague.png
         type=impact
         range=melee
-        damage=3
-        number=7
+        damage=8
+        number=3
         [specials]
             {WEAPON_SPECIAL_PLAGUE}
             {WEAPON_SPECIAL_FIRSTSTRIKE}
             {WEAPON_SPECIAL_NOCOUNTERATTACK}
+            {WEAPON_SPECIAL_DRAIN}
+            {WEAPON_SPECIAL_BACKSTAB}
+            {WEAPON_SPECIAL_POISON}
         [/specials]
     [/attack]
     [attack]
@@ -63,9 +56,12 @@ This ability, in all aspects, is the first step towards cheating death of its ul
             {WEAPON_SPECIAL_CIRCLE}
             {WEAPON_SPECIAL_FIRSTSTRIKE}
             {WEAPON_SPECIAL_NOCOUNTERATTACK}
+            {WEAPON_SPECIAL_DRAIN}
+            {WEAPON_SPECIAL_BACKSTAB}
+            {WEAPON_SPECIAL_SLOW}
         [/specials]
         range=ranged
-        damage=21
+        damage=25
         number=2
         icon=attacks/iceball.png
     [/attack]
@@ -77,9 +73,12 @@ This ability, in all aspects, is the first step towards cheating death of its ul
             {WEAPON_SPECIAL_CIRCLE}
             {WEAPON_SPECIAL_FIRSTSTRIKE}
             {WEAPON_SPECIAL_NOCOUNTERATTACK}
+            {WEAPON_SPECIAL_DRAIN}
+            {WEAPON_SPECIAL_BACKSTAB}
+            {WEAPON_SPECIAL_SLOW}
         [/specials]
         range=ranged
-        damage=15
+        damage=18
         number=2
         icon=attacks/dark-missile.png
     [/attack]
@@ -93,6 +92,7 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         [/frame]
         [frame]
             image="units/undead-necromancers/necromancer+female-magic-3.png"
+            halo=halo/undead/black-magic-[1~5].png:[75*4,50]
         [/frame]
         sound_start_time=-75
         [sound_frame]
@@ -162,7 +162,7 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         [frame]
             image="units/undead-necromancers/necromancer+female-attack-staff-[1~2].png:[100,200]"
         [/frame]
-        {SOUND:HIT_AND_MISS staff.wav {SOUND_LIST:MISS} -100}
+        {SOUND:HIT_AND_MISS staff.ogg staff-miss.ogg -125}
         [frame]
             image="units/undead-necromancers/necromancer+female-magic-1.png:75"
         [/frame]
@@ -170,4 +170,80 @@ This ability, in all aspects, is the first step towards cheating death of its ul
             image="units/undead-necromancers/necromancer+female.png:75"
         [/frame]
     [/attack_anim]
+    [female]
+        name= _ "female^Necromancer"
+        gender=female
+        image="units/undead-necromancers/necromancer+female.png"
+        profile="portraits/humans/necromancer+female.png"
+        die_sound={SOUND_LIST:HUMAN_FEMALE_DIE}
+        {DEFENSE_ANIM "units/undead-necromancers/necromancer+female-defend.png" "units/undead-necromancers/necromancer+female.png" {SOUND_LIST:HUMAN_FEMALE_HIT} }
+        [recruiting_anim]
+            [filter_second]
+                race=undead
+            [/filter_second]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-[1,2].png:75"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-3.png"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-[2,1].png:50"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female.png:1"
+            [/frame]
+        [/recruiting_anim]
+        [attack_anim]
+            [filter_attack]
+                name=chill wave
+            [/filter_attack]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-[1,2].png:75"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-3.png"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-[2,1].png:50"
+            [/frame]
+        [/attack_anim]
+        [attack_anim]
+            [filter_attack]
+                name=shadow wave
+            [/filter_attack]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-[1,2].png:75"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-3.png"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-3.png:250"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-[2,1].png:50"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female.png:50"
+            [/frame]
+        [/attack_anim]
+        [attack_anim]
+            [filter_attack]
+                name=plague staff
+            [/filter_attack]
+            [frame]
+                image="units/undead-necromancers/necromancer+female.png:50"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-attack-staff-[1~2].png:[100,200]"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female-magic-1.png:75"
+            [/frame]
+            [frame]
+                image="units/undead-necromancers/necromancer+female.png:75"
+            [/frame]
+        [/attack_anim]
+    [/female]
 [/unit_type]
