--- a/Nox/macros/amla.cfg
+++ b/Nox/macros/amla.cfg
@@ -29,7 +29,7 @@
     [/advancement]
 #enddef
 
-#define AMLA_NEMESIS
+#define AMLA_NOX
     # Canned definition of the default AMLA.
     [advancement]
         strict_amla=yes
