--- a/Nox/units/Nox.cfg
+++ b/Nox/units/Nox.cfg
@@ -1,7 +1,7 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Nyx
-    name= _ "female^Necromancer"
+    id=Nox
+    name= _ "female^Nox"
     {TRAIT_FEARLESS_MUSTHAVE}
     {TRAIT_LOYAL}
     {TRAIT_UNDEAD}
@@ -16,7 +16,7 @@
     level=6
     alignment=chaotic
     advances_to=Null
-    {AMLA_NEMESIS}
+    {AMLA_NOX}
     cost=250
     usage=mixed fighter
     description= _ "One of the pinnacles of what is considered ‘black magic’ is the art of necromancy, the terrible ability to awaken the dead with false life. This discovery alone caused humanity’s condemnation of black magic, for the nightmarish things it has made real have given fear a vast new arsenal.
