--- a/Nox/units/Nox.cfg
+++ b/Nox/units/Nox.cfg
@@ -55,7 +55,6 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         damage=8
         number=4
         [specials]
-            {WEAPON_SPECIAL_GREATER_INFECT}
             {WEAPON_SPECIAL_FIRSTSTRIKE}
             {WEAPON_SPECIAL_DRAIN}
             {WEAPON_SPECIAL_UBER_BACKSTAB}
@@ -65,6 +64,8 @@ This ability, in all aspects, is the first step towards cheating death of its ul
             {WEAPON_SPECIAL_SHOCKWAVE}
             {WEAPON_SPECIAL_NOCOUNTERATTACK}
             {WEAPON_SPECIAL_HIT_AND_RUN}
+            {WEAPON_SPECIAL_POISON}
+            {WEAPON_SPECIAL_PLAGUE}
         [/specials]
     [/attack]
     [attack]
@@ -82,6 +83,7 @@ This ability, in all aspects, is the first step towards cheating death of its ul
             {WEAPON_SPECIAL_SHOCKWAVE}
             {WEAPON_SPECIAL_NOCOUNTERATTACK}
             {WEAPON_SPECIAL_HIT_AND_RUN}
+            {WEAPON_SPECIAL_POISON}
         [/specials]
         range=ranged
         damage=30
@@ -103,6 +105,7 @@ This ability, in all aspects, is the first step towards cheating death of its ul
             {WEAPON_SPECIAL_SHOCKWAVE}
             {WEAPON_SPECIAL_NOCOUNTERATTACK}
             {WEAPON_SPECIAL_HIT_AND_RUN}
+            {WEAPON_SPECIAL_POISON}
         [/specials]
         range=ranged
         damage=20
